--- a/Extra_Work/Tutorial1_Extension.ipynb
+++ b/Extra_Work/Tutorial1_Extension.ipynb
@@ -45,12 +45,21 @@
     "\n",
     "Where the summation convention from index notation (Computational Continuum Mechanics) is applied.\n",
     "\n",
-    "However, we got a very odd defii"
+    "However, we got a very odd definition in the machine learning course, which I still don't fully comprehend. This is, as per Dr Huthwaites notes:\n",
+    "\n",
+    "$$C_{ij} = (X-\\mu)_{ki}(X-\\mu)_{kj}$$\n",
+    "Let's explore this.\n",
+    "\n",
+    "His equation does seem very similar to the non-simplified one that we wrote in the beginning, meaning it is something like this:\n",
+    "\n",
+    "$$\\Sigma_{ij} = E\\left[C_{ij}\\right]$$\n",
+    "\n",
+    "Let's explore this further"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -67,13 +76,14 @@
        "       [3.33333333, 4.22222222]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# let's text this\n",
+    "# my understanding\n",
+    "\n",
     "def covariance_matrix(X):\n",
     "    \"\"\"\n",
     "    Calculates the covariance matrix for a given input X with n = X.shape[1] predictors\n",
@@ -99,6 +109,65 @@
     "\n",
     "Sigma = covariance_matrix(X)\n",
     "Sigma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.0, 4.333333333333333]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 8.        , 10.        ],\n",
+       "       [10.        , 12.66666667]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def huthwaite_cov(X):\n",
+    "    \"\"\"\n",
+    "    Calculates the huthwaite covariance matrix\n",
+    "    \"\"\"\n",
+    "    n = X.shape[1]\n",
+    "    n_points = X.shape[0]\n",
+    "    C = np.zeros([n,n])\n",
+    "    mu = [X[:,i].mean(axis = 0) for i in range(n)]\n",
+    "    print(mu)\n",
+    "    for i in range(n): # rows\n",
+    "        for j in range(i,n):\n",
+    "            C[i,j] = ((X[:,i]-mu[i])*(X[:,j]-mu[j])).sum(axis = 0)\n",
+    "            if i != j:\n",
+    "                C[j,i] = C[i,j]\n",
+    "            \n",
+    "    return C\n",
+    "\n",
+    "def covariance_matrix(C):\n",
+    "    \"\"\"\n",
+    "    Calculates the covariance matrix from the huthwaite_matrix C\n",
+    "    \"\"\"\n",
+    "    pass\n",
+    "\n",
+    "# not quite convinced?\n",
+    "\n",
+    "X = np.array(\n",
+    "    [[1,2],\n",
+    "     [3,4],\n",
+    "     [5,7]]\n",
+    ")    \n",
+    "\n",
+    "C = huthwaite_cov(X)\n"
    ]
   },
   {
