completed huthwaite's covariance matrix

--- a/Extra_Work/Tutorial1_Extension.ipynb
+++ b/Extra_Work/Tutorial1_Extension.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -126,11 +126,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 8.        , 10.        ],\n",
-       "       [10.        , 12.66666667]])"
+       "array([[2.66666667, 3.33333333],\n",
+       "       [3.33333333, 4.22222222]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,34 @@
     "     [5,7]]\n",
     ")    \n",
     "\n",
-    "C = huthwaite_cov(X)\n"
+    "C = huthwaite_cov(X)\n",
+    "\n",
+    "Sigma = C/3\n",
+    "Sigma"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It seems that our understanding of Huthwaite's C function was in fact correct. It's quite odd that he would use such a definition, perhaps it's worth discussing this with him?\n",
+    "\n",
+    "The tutorial included another covariance matrix, albeit this was a bit, confusing?\n",
+    "It did not make sense to me. So it's worth exploring this for a bit."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Meshrid"
    ]
   },
   {
