completed the section on covariance

--- a/Extra_Work/Tutorial1_Extension.ipynb
+++ b/Extra_Work/Tutorial1_Extension.ipynb
@@ -185,16 +185,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_cov(*sigma, **kwargs):\n",
+    "    \"\"\"\n",
+    "    Creates a covariance matrix based on the value of theta \n",
+    "    \n",
+    "    Attributes:\n",
+    "    -----------\n",
+    "    \n",
+    "    *sigma: *int\n",
+    "        Can be 2 or 3 dimensions, defines the standard deviations for each degree of freedom\n",
+    "        \n",
+    "    **kwargs: *keyword = *int\n",
+    "        kwargs for the create_rotation_matrix function, defines the intensity of the covariance\n",
+    "        \n",
+    "    Notes:\n",
+    "    ------\n",
+    "    - add functionality for N dimension sigma (in that case, the concept of the rotation matrix would cease\n",
+    "    to exist though)\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    dof = len(sigma)\n",
+    "    covar = np.zeros([dof,dof])\n",
+    "    for i,std in enumerate(sigma):\n",
+    "        covar[i,i] = std\n",
+    "    \n",
+    "    kwargs.update((x, y / 360 * 2 * np.pi) for x, y in kwargs.items()) # convert angles to radians\n",
+    "    R = create_rotation_matrix(**kwargs)\n",
+    "    try:\n",
+    "        covar = np.matmul(np.matmul(R, covar), R.T)\n",
+    "    except:\n",
+    "        raise ValueError((\n",
+    "            'Your covariance matrix is expected to be of shape {}, whereas your rotation matrix is of'\n",
+    "            'shape {}. Check that you are not trying to rotate a 2D matrix in 3 dimensions'\n",
+    "        ).format(covar.shape,R.shape))\n",
+    "\n",
+    "    return covar\n",
+    "\n",
+    "def create_rotation_matrix(theta_x = 0,theta_y = 0, theta_z = 0):\n",
+    "    \"\"\"\n",
+    "    creates the 2D or 3D rotation matrices depending on the inputs that are given. Note that all angles must\n",
+    "    in RADIANS\n",
+    "    \n",
+    "    Attributes:\n",
+    "    -----------\n",
+    "    \n",
+    "    theta_x: int\n",
+    "        defines the yaw of the system\n",
+    "    \n",
+    "    theta_y: int\n",
+    "        defines the pitch of the system\n",
+    "    \n",
+    "    theta_z: int\n",
+    "        defines the roll of the system\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if theta_y or theta_z:\n",
+    "        R_x = np.array([\n",
+    "            [1, 0, 0],\n",
+    "            [0, np.cos(theta_x), -np.sin(theta_x)],\n",
+    "            [0, np.sin(theta_x), np.cos(theta_x)]\n",
+    "        ])\n",
+    "        \n",
+    "        R_y = np.array([\n",
+    "            [np.cos(theta_y), 0, np.sin(theta_y)],\n",
+    "            [0, 1, 0],\n",
+    "            [-np.sin(theta_y),0, np.cos(theta_y)]\n",
+    "        ])\n",
+    "        \n",
+    "        R_z = np.array([\n",
+    "            [np.cos(theta_z), -np.sin(theta_z), 0],\n",
+    "            [np.sin(theta_z), np.cos(theta_z), 0],\n",
+    "            [0,0,1]\n",
+    "        ])\n",
+    "        R = np.matmul(np.matmul(R_x,R_y),R_z)\n",
+    "        \n",
+    "    else:\n",
+    "        R = np.array([\n",
+    "            [np.cos(theta_x), -np.sin(theta_x)],\n",
+    "            [np.sin(theta_x), np.cos(theta_x)]\n",
+    "        ])\n",
+    "        \n",
+    "    return R\n",
+    "\n",
+    "\n",
+    "# create a function that can plot the covariances for multiple plots, i.e. 2D 3D as a function of the theta\n",
+    "# that you give it (maybe it's best to convert what you have above into a CLASS for ease?)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Meshrid"
+    "After exploration, it seems to me that Huthwaite's get_cov function is just a makeshift method for creating a covariance matrix...\n",
+    "\n",
+    "This is because after multiplication, you are left with the following:\n",
+    "\n",
+    "\n",
+    "$$\\mathrm{Cov} = \\left [\\begin{matrix}\n",
+    "\\sigma_x^2 & \\sigma_x\\cos\\theta\\sin\\theta - \\sigma_y\\cos\\theta\\sin\\theta \\\\\n",
+    "\\sigma_x\\cos\\theta\\sin\\theta - \\sigma_y\\cos\\theta\\sin\\theta  & \\sigma_y^2\n",
+    "\\end{matrix}\\right]$$\n",
+    "\n",
+    "Theta thus controls the degree to which these points are related."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Meshgrid"
    ]
   },
   {
