completed the multivariate function

--- a/Extra_Work/Tutorial2_Extension.ipynb
+++ b/Extra_Work/Tutorial2_Extension.ipynb
@@ -49,14 +49,12 @@
    "source": [
     "# Gaussian Function\n",
     "\n",
-    "In the tutorial, I created my own gaussian function. However, now I'm interested to expand this for the multivarite case.\n",
-    "\n",
-    "Recall that, in the "
+    "In the tutorial, I created my own gaussian function. However, now I'm interested to expand this for the multivarite case."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +63,10 @@
     "def gaussian(x, mu = 0, sigma = 1):\n",
     "    \"\"\"\n",
     "    Gives the cumulative probability for each value in x based on a normal distribution defined by mu and sigma\n",
+    "    \n",
+    "    Dependencies:\n",
+    "    -------------\n",
+    "    import numpy as np\n",
     "    \n",
     "    Parameters:\n",
     "    -----------\n",
@@ -78,35 +80,108 @@
     "    sigma (optional -- defaults to 1): float\n",
     "        this defines the standard deviation of the normal distribution\n",
     "        \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    \n",
+    "    g: np.array\n",
+    "        np.array of the probabilities\n",
     "    \"\"\"\n",
+    "    \n",
     "    x = np.asarray(x) if isinstance(x,list) else x\n",
     "    \n",
     "    g = 1/(np.sqrt(2*np.pi)* sigma) * np.exp(-1/2 * np.power((x-mu)/sigma,2))\n",
     "    return g\n",
     "\n",
     "\n",
-    "def multi_gaussian(X, mu = None, Sigma = 1):\n",
-    "    # add option to set the correlation coefficient urself\n",
+    "def multi_gaussian(X, mu = 0, Sigma = 1):\n",
+    "    \"\"\"\n",
+    "    Gives the cumulative probabilities for each value in X based on the normal distribution defined by mu\n",
+    "    and sigma\n",
+    "    \n",
+    "    Read the parameters as it contains important information about how the inputs are meant to be set up\n",
+    "    \n",
+    "    NOTE:\n",
+    "    -----\n",
+    "    Currently the function does not allow for setting custom correlations. Thus to set covariances, the user\n",
+    "    must input a covariance matrix.\n",
+    "    \n",
+    "    Dependencies:\n",
+    "    -------------\n",
+    "    import numpy as np\n",
+    "    \n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    \n",
+    "    X: np.array\n",
+    "        this is the array of the input data. The array is of shape n1 x n2, where n2 is the degrees of freedom\n",
+    "        of the array (i.e. the attributes). This defines the order of the multivariate problem. n1 refers to\n",
+    "        the number of datapoints\n",
+    "    \n",
+    "    mu (optional -- defaults to 0): list OR int\n",
+    "        depending on the input, it instantiates the mean vector. \n",
+    "        - If 'int': creates a mean vector of constant mean\n",
+    "        - If 'list': sets the mean vector as the list\n",
+    "        \n",
+    "    Sigma (optional -- defaults to 1) list OR int OR np.array\n",
+    "        depending on the input, instantiates the covariance matrix.\n",
+    "        - If 'np.array': sets the covariance matrix Sigma as the input array\n",
+    "        - If 'int': creates a covariance matrix with all the standard deviations constant\n",
+    "        - If 'list': creates a covariance matrix with the standard deviations based on the values in 'list'\n",
+    "    \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    p: list\n",
+    "        list of length n1. The probabilities for each datapoint\n",
+    "    \"\"\"\n",
+    "    \n",
     "    n = X.shape[1] # define the degrees of freedom\n",
+    "    data_dimensions = X.shape[0] # defines the number of datapoints\n",
     "    \n",
-    "    mu = [0 for i in range(n)] if not mu else mu\n",
-    "    # need to modify mu to be able to add it manually\n",
-    "    \n",
+    "    mu = [mu for i in range(n)] if not mu else mu\n",
     "    Sigma = (lambda x: x, lambda x: np.diag(x))[isinstance(Sigma, list)](\n",
     "        (lambda x: x,lambda x: np.identity(n)*x)[isinstance(Sigma, int)](Sigma)\n",
     "    )\n",
     "    \n",
-    "    # this equation is mathematically problematic? You have not scaled the vectors correctly...\n",
-    "\n",
-    "    p = 1/((2*np.pi)**(n/2) * np.sqrt(np.linalg.det(Sigma))) * np.exp(\n",
+    "    p = []\n",
+    "    \n",
+    "    for i in range(data_dimensions):\n",
+    "        p.append(\n",
+    "            1/((2*np.pi)**(n/2) * np.sqrt(np.linalg.det(Sigma))) * np.exp(\n",
+    "                -1/2 * np.matmul(np.matmul((X[i,:]-mu), np.linalg.inv(Sigma)), (X[i,:]-mu).T)\n",
+    "            )\n",
+    "        )\n",
+    "        \n",
+    "    # this was from an old iteration, what is does is put the correct probabilities in the diagonals\n",
+    "    # can you figure out what the off-diagonal terms mean?\n",
+    "    \"\"\"p = 1/((2*np.pi)**(n/2) * np.sqrt(np.linalg.det(Sigma))) * np.exp(\n",
     "        -1/2 * np.matmul(np.matmul(X-mu, np.linalg.inv(Sigma)), (X-mu).T)\n",
-    "    )\n",
-    "    return p, mu, Sigma\n",
+    "    )\"\"\"\n",
+    "    \n",
+    "    return p\n",
     "\n",
     "def covariance_matrix(X):\n",
-    "    # this is from tutorial1_extension, needs some modificiation\n",
     "    \"\"\"\n",
     "    Calculates the covariance matrix for a given input X with n = X.shape[1] predictors\n",
+    "    \n",
+    "    Dependencies:\n",
+    "    -------------\n",
+    "    import numpy as np\n",
+    "    \n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    \n",
+    "    X: np.array\n",
+    "        the input array of the data. Array should be constructed in the following format: n1 x n2, where n1\n",
+    "        refers to the number of datapoints, and n2 refers to the dgrees of freedom (attributes)\n",
+    "    \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    mu: list\n",
+    "        a list of the means of each attribute\n",
+    "    \n",
+    "    Sigma: np.array\n",
+    "        the covariance matrix for the inputs\n",
     "    \"\"\"\n",
     "    n = X.shape[1]\n",
     "    n_points = X.shape[0]\n",
@@ -123,94 +198,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(array([[2.91502447e-03, 4.30396995e+01],\n",
-      "       [4.30396995e+01, 3.30371766e-05]]), [0, 0], array([[1., 0.],\n",
-      "       [0., 1.]]))\n"
+      "[0.0029150244650281935, 0.15915494309189535]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 2. ,  2. ],\n",
-       "       [-3.6, -2. ]])"
-      ]
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = np.array([[2,2],[-3.6,-2]])\n",
+    "# to test\n",
+    "\n",
+    "X = np.array([[2,2],[0,0]])\n",
     "\n",
     "mu, Sigma = covariance_matrix(X)\n",
     "\n",
-    "print(multi_gaussian(X, mu = [0,0], Sigma = 1))\n",
-    "X"
+    "print(multi_gaussian(X, mu = [0,0], Sigma = 1))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 81,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1. 0. 0.]\n",
-      " [0. 1. 0.]\n",
-      " [0. 0. 1.]]\n"
-     ]
-    }
-   ],
    "source": [
-    "n = 3\n",
-    "Sigma = 1\n",
-    "Sigma = (lambda x: x,lambda x: np.asarray(x).reshape(-n,n))[isinstance(Sigma, list)](\n",
-    "     (lambda x: x,lambda x: np.identity(n)*x)[isinstance(Sigma, int)](Sigma)\n",
-    "    )\n",
+    "The results above were verified on a bivariate normal distribution (http://www.anthony-vba.kefra.com/excel/justexcel2-bivariate.htm). \n",
     "\n",
-    "print(Sigma)"
+    "It's worth noting that during the time this was being developed, it was noticed that some matrices are quite problematic (if they are singular for example, or have very odd determinants.)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 1 into shape (3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-79-288e4e056591>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mSigma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m Sigma = (Sigma,np.asarray(Sigma).reshape(-n,n))[isinstance(Sigma, list)](\n\u001b[0m\u001b[1;32m      3\u001b[0m      \u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSigma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     )\n",
-      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 1 into shape (3)"
-     ]
-    }
-   ],
-   "source": [
-    "Sigma = 5\n",
-    "Sigma = (lambda x: x,np.asarray(Sigma).reshape(-n,n))[isinstance(Sigma, list)](\n",
-    "     (lambda x: x,lambda x: 0)[isinstance(Sigma, int)](5)\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
