re-ran notebook

--- a/Extra_Work/Tutorial1_Extension.ipynb
+++ b/Extra_Work/Tutorial1_Extension.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "       [3.33333333, 4.22222222]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "       [3.33333333, 4.22222222]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,16 +324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1239418d0>]"
+       "[<matplotlib.lines.Line2D at 0x11b53a150>]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
        "       [ 1.        ,  1.        ,  1.        ]])"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,16 +485,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.contour.QuadContourSet at 0x133f87450>"
+       "<matplotlib.contour.QuadContourSet at 0x11b6ac0d0>"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -528,16 +528,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.contour.QuadContourSet at 0x1779ae910>"
+       "<matplotlib.contour.QuadContourSet at 0x11c396210>"
       ]
      },
-     "execution_count": 325,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +585,7 @@
        "array([3, 7])"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
