--- a/Extra_Work/Tutorial3_Extension.ipynb
+++ b/Extra_Work/Tutorial3_Extension.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -170,11 +170,38 @@
     "    \"\"\"\n",
     "    A class for linear regression\n",
     "    \n",
-    "    Attributes:\n",
+    "    IMPORTANT NOTES:\n",
+    "    ----------------\n",
+    "    - Currently does not have functionality for multi target regression\n",
+    "    - it is a requirement that the data is of pandas format (SEE Parameters)\n",
+    "    - does not have a scaling feature\n",
+    "    \n",
+    "    Parameters:\n",
     "    -----------\n",
+    "    \n",
+    "    X: pd.DataFrame OR pd.Series\n",
+    "        the predictor variables\n",
+    "    \n",
+    "    y: pd.Series\n",
+    "        the target variable\n",
     "    \n",
     "    Methods:\n",
     "    --------\n",
+    "    \n",
+    "    fit(self): \n",
+    "        performs a linear regression on the predictor variables\n",
+    "        RETURNS None\n",
+    "    \n",
+    "    predict(self, X = None):\n",
+    "        predicts target variable as yhat based on X given (otherwise on that\n",
+    "        used for fit)\n",
+    "        RETURNS yhat \n",
+    "        \n",
+    "    plot(self, axis = 0):\n",
+    "        overlays the fitted data over actual values; axis determines which attribute\n",
+    "        to plot\n",
+    "        RETURNS None\n",
+    "        \n",
     "    \"\"\"\n",
     "    \n",
     "    def __init__(self, X, y):\n",
@@ -231,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -255,149 +282,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'X' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-162f079c6aab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mLinearRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
-     ]
-    }
-   ],
    "source": [
+    "A class to perform linear regression has been created. The next steps would be to add some automation into the plots, and to add a feature for generating polynomial features (and combining them with normal regression models -- **think about the problem you had with ICDSS challenge**\n",
     "\n",
-    "        \n",
+    "So in summmary:\n",
     "\n",
-    "def LinearRegression(X, y):\n",
-    "    \"\"\"\n",
-    "    A function that performs a multivariate linear regression with predictors X and\n",
-    "    target y\n",
-    "    \n",
-    "    NOTE: X must be a dataframe as input, NOT series\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    n_attr = X.shape[1] if len(X.shape) > 1 else 1\n",
-    "    n_points = X.shape[0]\n",
-    "    X = np.append(np.ones([n_points,1]), X, axis=1)\n",
-    "    print(X)\n",
+    "1) can you add a function that generates polynomial features\n",
+    "    - you should be able to extract this data, either separately or as part of the input data\n",
+    "    - this should add the correct labels to the respective indices (**might be wiser to work with PANDAS?**)\n",
+    "    - should be able to choose the order of the polynomial features for each feature, either using an easy method. Should be able to control this nicely\n",
     "\n",
-    "LinearRegression(X,y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[3000.8863473  9979.55332572]\n",
-      " [1000.         3000.8863473 ]] [[482776.42824979]\n",
-      " [149967.06847032]]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "too many indices for array",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-193-fb14c3e6ad5b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLinReg2D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'black'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbeta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-193-fb14c3e6ad5b>\u001b[0m in \u001b[0;36mplot\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m         \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinspace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m200\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m200\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: too many indices for array"
-     ]
-    }
-   ],
-   "source": [
-    "class Regression():\n",
-    "    \"\"\" Class for regression \"\"\"\n",
-    "    def __init__(self, X, y):\n",
-    "        self.X = np.asarray(X)\n",
-    "        self.y = np.asarray(y)\n",
-    "        beta = None\n",
-    "    \n",
-    "\n",
-    "    def LinReg2D(self):\n",
-    "        n_points = self.X.shape[0]\n",
-    "        A = np.array([\n",
-    "            [self.X.sum(), (self.X**2).sum()],\n",
-    "            [n_points, self.X.sum()],\n",
-    "        ])\n",
-    "        b = np.array([\n",
-    "            [np.dot(self.X,self.y)],\n",
-    "            [self.y.sum()]\n",
-    "        ])\n",
-    "        print(A,b)\n",
-    "        self.beta = np.linalg.solve(A,b)\n",
-    "        return self.beta\n",
-    "    \n",
-    "    def LinearRegression(self):\n",
-    "        n_points = self.X.shape[0]\n",
-    "        \n",
-    "        n_attr = self.X.shape[1]\n",
-    "        A = np.zeros([n_attr + 1, n_attr +1])\n",
-    "        b = np.zeros([n_attr+1,1])\n",
-    "        for i in range(n_attr+1):\n",
-    "            b[i] = np.dot(self.y, (self.X[:,0])**(n_attr-i))\n",
-    "            for j in range(n_attr+1):\n",
-    "                A[i,j] = np.sum((self.X[:,0])**(n_attr - i + j))\n",
-    "        print(A,b)\n",
-    "        self.beta = np.linalg.solve(A,b)\n",
-    "        print(self.beta)\n",
-    "        return self.beta\n",
-    "        \n",
-    "    def plot(self,**kwargs):\n",
-    "        plt.plot(self.X[:,0], self.y,'.')\n",
-    "        x = np.linspace(0,6,200)\n",
-    "        y = np.zeros(200)\n",
-    "        for i, coeff in enumerate(self.beta):\n",
-    "            print(i, coeff)\n",
-    "            y = np.add(y, coeff*x**i)\n",
-    "            \n",
-    "        plt.plot(x,y,**kwargs)\n",
-    "    \n",
-    "\n",
-    "model = Regression(x,y)\n",
-    "model.LinReg2D()\n",
-    "model.plot(color='black')\n",
-    "model.beta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "tuple index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-194-52a7505c8219>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLinearRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'black'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbeta\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-193-fb14c3e6ad5b>\u001b[0m in \u001b[0;36mLinearRegression\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0mn_points\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m         \u001b[0mn_attr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m         \u001b[0mA\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn_attr\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_attr\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn_attr\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
-     ]
-    }
-   ],
-   "source": [
-    "# this is only for the sake of testing\n",
-    "b = np.zeros([3,1])\n",
-    "model = Regression(x,y)\n",
-    "model.LinearRegression()\n",
-    "model.plot(color = 'black')\n",
-    "model.beta\n"
+    "2) can you expand on the plotting capabilities of this?\n",
+    "    - you need labels / titles\n",
+    "    - you need to be able to set styles, markers, legends\n",
+    "    - ideally, you'd like to be able to visualise either in 3D or 2D the effects of multiple variables on the regression and show them in subplots, as well as show appropriate metrics for each\n"
    ]
   },
   {
