--- a/Tutorials/Tutorial4.ipynb
+++ b/Tutorials/Tutorial4.ipynb
@@ -354,23 +354,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(40000,)\n"
+      "(40000,)\n",
+      "[1. 3. 4. 5.]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.contour.QuadContourSet at 0x124c2f4d0>"
+       "<matplotlib.contour.QuadContourSet at 0x188076bd0>"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -422,7 +423,7 @@
     "        omega[omhere == 1] = i + 1\n",
     "    \n",
     "omega = np.reshape(omega, [200, 200])\n",
-    "\n",
+    "print(np.unique(omega))\n",
     "plt.contourf(x1,x2,omega)"
    ]
   },
