--- a/Coursework/EDA.ipynb
+++ b/Coursework/EDA.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "4         0.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,127 +153,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ada2cfa38cc431bb5894a8bb7eb78ca",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Summarize dataset'), FloatProgress(value=0.0, max=21.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a8e9876c6fb4610a58033186f46a6ab",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Generate report structure'), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d30f3b57ee4a44b2ae9a8bb74d9a9693",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Render HTML'), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5062ec33db704e04b73e651a335a6f09",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Export report to file'), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "profile = ProfileReport(df, title=\"dataset1_report\", explorative = True)\n"
+    "#profile = ProfileReport(df, title=\"dataset1_report\", explorative = True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ff830c6d3a54829af274a311034c4c1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HTML(value='Export report to file'), FloatProgress(value=0.0, max=1.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "profile.to_file(\"../Reports/dataset1_report.html\")"
+    "#profile.to_file(\"../Reports/dataset1_report.html\")"
    ]
   },
   {
@@ -301,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -362,181 +255,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Arm length (m)</th>\n",
-       "      <th>Ball weight (kg)</th>\n",
-       "      <th>Ball radius (mm)</th>\n",
-       "      <th>Air temperature (deg C)</th>\n",
-       "      <th>Spring constant (N per m)</th>\n",
-       "      <th>Device weight (kg)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.414858</td>\n",
-       "      <td>0.551331</td>\n",
-       "      <td>0.008136</td>\n",
-       "      <td>0.478261</td>\n",
-       "      <td>0.661520</td>\n",
-       "      <td>0.548753</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.337923</td>\n",
-       "      <td>0.854439</td>\n",
-       "      <td>0.828466</td>\n",
-       "      <td>0.826087</td>\n",
-       "      <td>0.408638</td>\n",
-       "      <td>0.715222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.747738</td>\n",
-       "      <td>0.737651</td>\n",
-       "      <td>0.348392</td>\n",
-       "      <td>0.173913</td>\n",
-       "      <td>0.630848</td>\n",
-       "      <td>0.602733</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.283891</td>\n",
-       "      <td>0.753372</td>\n",
-       "      <td>0.198159</td>\n",
-       "      <td>0.565217</td>\n",
-       "      <td>0.059964</td>\n",
-       "      <td>0.544820</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.193165</td>\n",
-       "      <td>0.637913</td>\n",
-       "      <td>0.315820</td>\n",
-       "      <td>0.173913</td>\n",
-       "      <td>0.072277</td>\n",
-       "      <td>0.423524</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1995</th>\n",
-       "      <td>0.150859</td>\n",
-       "      <td>0.528405</td>\n",
-       "      <td>0.431753</td>\n",
-       "      <td>0.652174</td>\n",
-       "      <td>0.747561</td>\n",
-       "      <td>0.791356</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1996</th>\n",
-       "      <td>0.477919</td>\n",
-       "      <td>0.396414</td>\n",
-       "      <td>0.411752</td>\n",
-       "      <td>0.391304</td>\n",
-       "      <td>0.099353</td>\n",
-       "      <td>0.721234</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1997</th>\n",
-       "      <td>0.461584</td>\n",
-       "      <td>0.376867</td>\n",
-       "      <td>0.439014</td>\n",
-       "      <td>0.652174</td>\n",
-       "      <td>0.821144</td>\n",
-       "      <td>0.480009</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1998</th>\n",
-       "      <td>0.237203</td>\n",
-       "      <td>0.523862</td>\n",
-       "      <td>0.790330</td>\n",
-       "      <td>0.130435</td>\n",
-       "      <td>0.445898</td>\n",
-       "      <td>0.643856</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1999</th>\n",
-       "      <td>0.424458</td>\n",
-       "      <td>0.323667</td>\n",
-       "      <td>0.713716</td>\n",
-       "      <td>0.695652</td>\n",
-       "      <td>0.668714</td>\n",
-       "      <td>0.501686</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2000 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Arm length (m)  Ball weight (kg)  Ball radius (mm)  \\\n",
-       "0           0.414858          0.551331          0.008136   \n",
-       "1           0.337923          0.854439          0.828466   \n",
-       "2           0.747738          0.737651          0.348392   \n",
-       "3           0.283891          0.753372          0.198159   \n",
-       "4           0.193165          0.637913          0.315820   \n",
-       "...              ...               ...               ...   \n",
-       "1995        0.150859          0.528405          0.431753   \n",
-       "1996        0.477919          0.396414          0.411752   \n",
-       "1997        0.461584          0.376867          0.439014   \n",
-       "1998        0.237203          0.523862          0.790330   \n",
-       "1999        0.424458          0.323667          0.713716   \n",
-       "\n",
-       "      Air temperature (deg C)  Spring constant (N per m)  Device weight (kg)  \n",
-       "0                    0.478261                   0.661520            0.548753  \n",
-       "1                    0.826087                   0.408638            0.715222  \n",
-       "2                    0.173913                   0.630848            0.602733  \n",
-       "3                    0.565217                   0.059964            0.544820  \n",
-       "4                    0.173913                   0.072277            0.423524  \n",
-       "...                       ...                        ...                 ...  \n",
-       "1995                 0.652174                   0.747561            0.791356  \n",
-       "1996                 0.391304                   0.099353            0.721234  \n",
-       "1997                 0.652174                   0.821144            0.480009  \n",
-       "1998                 0.130435                   0.445898            0.643856  \n",
-       "1999                 0.695652                   0.668714            0.501686  \n",
-       "\n",
-       "[2000 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_scaled"
+    "df_scaled.to_csv('../Data/dataset1_scaled.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
