--- a/Coursework/Model1.ipynb
+++ b/Coursework/Model1.ipynb
@@ -1720,12 +1720,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "# good work done, try to get 98% !"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Summary of things learnt\n",
+    "\n",
+    "1. BatchNormalization greatly improves model performance\n",
+    "2. Epochs don't seem to cause overfitting of data as suggested by Huthwaite, can you verify this?\n",
+    "3. What does batchsize do exactly? How do you set it, what values should you choose?\n",
+    "4. F1_score punishes models for misclassifying, whereas accuracy just describes how accurate the model is. The latter is more useful for cases where you REALLY don't want to misclassify\n",
+    "5. loss defines how a model trains. There are different types of this that need to be explored\n",
+    "6. type of optiisers ought to also be explored, to see if they make any difference with modelling?\n",
+    "7. Evaluate shows you by default as the first value, the loss of the function. Any other values are metrics that are added on\n",
+    "8. The autokeras model tends to overcomplicate models, may not be appropriate for this project\n",
+    "9. K-Fold validation has not yet been used. What is grid search in this context?\n",
+    "10. model complexity $\\propto$ # of neurons\n",
+    "\n",
+    "\n",
+    "Links that might be useful:\n",
+    "\n",
+    "https://www.tensorflow.org/guide/keras/train_and_evaluate\n",
+    "\n",
+    "https://autokeras.com/tutorial/structured_data_classification/\n",
+    "\n",
+    "https://www.machinecurve.com/index.php/2020/02/18/how-to-use-k-fold-cross-validation-with-keras/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
