re-ran to change scaling of data

--- a/Coursework/EDA.ipynb
+++ b/Coursework/EDA.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "4         0.0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,17 +194,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00]\n",
-      " [6.29269432e-01 6.07997617e-01 4.69497951e-01 3.00000000e+01\n",
-      "  7.98732555e+02 7.99856434e+00]]\n",
+      "[[2.99790586e-01 3.10500234e-01 1.61670426e-01 1.88135000e+01\n",
+      "  2.84024574e+02 4.27726820e+00]\n",
+      " [9.83924728e-02 9.97600486e-02 8.83980565e-02 4.82435021e+00\n",
+      "  1.37933777e+02 2.21237117e+00]]\n",
       "Arm length (m)                0.052714\n",
       "Ball weight (kg)              0.010744\n",
       "Ball radius (mm)              0.010085\n",
@@ -248,14 +248,14 @@
     "    return scaled, scalers\n",
     "    \n",
     "\n",
-    "df_scaled, scalers = scale_data(df[df.columns[:-1]], mode = \"maxabs\")\n",
+    "df_scaled, scalers = scale_data(df[df.columns[:-1]], mode = \"standard\")\n",
     "print(scalers)\n",
     "print(df.min(axis =0), '\\n',df.max(axis = 0)-df.min(axis = 0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
